--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
-*{
-    margin: 0;
-    padding: 0;
+.body{
+    background-color: rgb(39, 245, 80);
+    text-align: center;
+}
+.texto{
+    text-align: center;
 }
